chore: add charity names to aria labels

--- a/profiles/templates/profiles/includes/my-donofy.html
+++ b/profiles/templates/profiles/includes/my-donofy.html
@@ -14,10 +14,10 @@
             <div class="row">
                 <li class="col-12 bold mb-2">
                     <hr>
-                    <a href="{% url 'charity_detail' charity.id %}" aria-label="link to charity page"
+                    <a href="{% url 'charity_detail' charity.id %}" aria-label="link to {{ charity.charity_name }} page"
                                 class="text-dark bold">{{ charity.charity_name }}</a>
                     <p class="text-small mb-0">Charity number: ({{ charity.charity_num}})</p>
-                    <a href="{% url 'profiles:delete_from_favs' charity.id %}" aria-label="action to remove charity from favourites list"
+                    <a href="{% url 'profiles:delete_from_favs' charity.id %}" aria-label="action to remove {{ charity.charity_name }} from favourites list"
                         class="a-pink">
                         Remove from favourites
                     </a>
