chore: fixes typo in anchor below save button

--- a/profiles/templates/profiles/includes/my-donofy.html
+++ b/profiles/templates/profiles/includes/my-donofy.html
@@ -33,7 +33,7 @@
             <p class="text-dark">Please save to update your donation total and preferences.</p>
             <button type="submit" class="btn btn-lg btn-pink mt-3 mb-2 col-12 col-md-6">Save</button>
         </ul>
-        <p class="text-dark mb-5">Ready to donate? <a href="{% url 'checkout' %}" class="a-pink"> Go to Donatation payment here.</a></p>
+        <p class="text-dark mb-5">Ready to donate? <a href="{% url 'checkout' %}" class="a-pink"> Go to Donation payment here.</a></p>
         <input type="hidden" name="redirect_url" value="{{ request.path }}">
     </form>
 
