fix: minor style issue on github icon

--- a/templates/base.html
+++ b/templates/base.html
@@ -154,8 +154,7 @@
 				<div class="col-12 mb-5">
 					<a href="https://github.com/Claire-Fisher/Donofy" class="footer-info a-black hover"
 						target="_blank" aria-label="Link to site develeper's gitHub (opens in a new tab)">
-						<i class="fa-brands fa-github icon-lg mx-2"></i>
-					</a>
+						<i class="fa-brands fa-github icon-lg mx-2"></i></a>
 					<a href="https://www.linkedin.com/in/claire-fisher-coder/" class="ml-2 a-black hover"
 						target="_blank" aria-label="Link to site develeper's Linkedin (opens in a new tab)">
 						<i class="fa-brands fa-linkedin icon-lg mx-2"></i>
